--- a/src/RegistrarUsuario/RegistrarUsuario.css
+++ b/src/RegistrarUsuario/RegistrarUsuario.css
@@ -10,8 +10,7 @@ body, html {
   display: flex;
   position: relative;              
   flex-direction: column;
-  background-color: #f4f4f5;
-}
+  }
 
 .main-content {
   display: flex;
@@ -48,6 +47,7 @@ body, html {
 
 .content-wrapper {
   align-self: stretch;
+  flex-direction: column;
   margin-top: 1.25rem;
   width: 100%;
   display: flex;
@@ -57,7 +57,7 @@ body, html {
 @media (max-width: 768px) {
   .content-wrapper {
     max-width: 100%;
-    flex-direction: column;
+    
     gap: 0;
   }
 }
@@ -92,7 +92,7 @@ body, html {
 
 .input-field {
   padding: 1rem 1.25rem;
-  background-color: white;
+  background-color: #f5f5f5;
   border-radius: 1.5rem;
   margin-bottom: 2.25rem;
   font-family: 'Roboto', sans-serif;
@@ -111,13 +111,20 @@ body, html {
 }
 
 .password-field {
+  width: 100%;
   display: flex;
   gap: 1.25rem;
   justify-content: space-between;
   padding: 0.875rem 1.5rem;
   margin-bottom: 2.5rem;
-  background-color: white;
+  background-color: #f5f5f5;
   border-radius: 1.5rem;
+}
+
+.password-field input{
+      background-color: #f5f5f5;
+    outline: none;
+    border: none;
 }
 
 @media (max-width: 768px) {
@@ -156,6 +163,7 @@ body, html {
   .image-section {
     margin-left: 0;
     width: 100%;
+    display: none;
   }
 }
 
@@ -231,21 +239,20 @@ body, html {
 
 .buttons-section {
   display: flex;
+  font: menu;
   flex-wrap: wrap;
   gap: 2.5rem;
   margin-top: 1.5rem;
   max-width: 100%;
-  font-size: 1.5rem;
-  line-height: 2rem;
-  font-weight: 700;
   color: white;
-  width: 400px;
+  width: 100%;
   align-items: flex-end;
 }
 
 .register-button {
   padding: 1.25rem 2.5rem;
   white-space: nowrap;
+  font-size: 12px;
   background-color: #ea580c;
   border-radius: 1000px;
   text-align: center;
@@ -259,18 +266,14 @@ body, html {
 }
 
 .login-button {
-  flex-grow: 1;
-  flex-shrink: 0;
-  flex-basis: 0;
-  padding: 1.2rem 2rem;
-  background-color: #0f172a !important;
-  border-radius: 1000px;
-  width: fit-content;
-  font-family: 'Roboto', sans-serif;
-  text-align: center;
+  padding: 1.25rem 2.5rem;
+  font-size: 12px;
   color: white;
-  cursor: pointer;
-  border-style: none;
+  text-decoration: none;
+  white-space: nowrap;
+  border-radius: 1000px;
+  text-align: center;
+  background-color: #0f172a !important;
 }
 
 .login-button:hover {
@@ -279,6 +282,7 @@ body, html {
 
 @media (max-width: 768px) {
   .login-button {
+    width: 100%;
     padding-left: 1.25rem;
     padding-right: 1.25rem;
   }
@@ -287,7 +291,7 @@ body, html {
 .home-link {
   display: flex;
   gap: 0.375rem;
-  margin-top: 3rem;
+  margin: 3rem 0;
   font-size: 1rem;
   line-height: 1.5rem;
   font-weight: 700;
@@ -311,4 +315,6 @@ body, html {
 
 .home-text {
   margin: auto 0;
+  text-decoration: none;
+  color: black;
 }
