Font-Family Prueba

--- a/src/PerfilDeAdmin/PerfilDeAdmin.css
+++ b/src/PerfilDeAdmin/PerfilDeAdmin.css
@@ -1,4 +1,5 @@
 /* PerfilDeAdmin Component Styles */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 /* Custom styles that complement Tailwind CSS */
 .perfil-de-admin {
