--- a/src/Reserva/ReservaMundoX.css
+++ b/src/Reserva/ReservaMundoX.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 .reserva-container {
   display: flex;
   overflow: hidden;
@@ -11,6 +13,7 @@
   margin-right: 6rem;
   font-size: 1.25rem;
   color: #0f172a;
+  font-family: Poppins, -apple-system, Roboto, Helvetica, sans-serif;
 }
 
 .main-content {
@@ -84,12 +87,14 @@
 .space-type {
   font-size: 0.75rem;
   color: #52525b;
+  font-family: Poppins, -apple-system, Roboto, Helvetica, sans-serif;
 }
 
 .space-name {
   margin-top: 0.25rem;
   font-size: 1.5rem;
   font-weight: 600;
+  font-family: Poppins, -apple-system, Roboto, Helvetica, sans-serif;
 }
 
 .center-name {
@@ -98,6 +103,7 @@
   font-size: 3rem;
   font-weight: 900;
   transform: rotate(4.671684489127985e-19rad);
+  font-family: Poppins, -apple-system, Roboto, Helvetica, sans-serif;
 }
 
 .booking-section {
@@ -134,6 +140,7 @@
   margin-left: 0.875rem;
   font-weight: 600;
   color: #0f172a;
+  font-family: Poppins, -apple-system, Roboto, Helvetica, sans-serif;
 }
 
 .form-input {
@@ -142,6 +149,7 @@
   background-color: white;
   border-radius: 29px;
   color: #d4d4d8;
+  font-family: Poppins, -apple-system, Roboto, Helvetica, sans-serif;
 }
 
 .form-row {
@@ -229,6 +237,7 @@
 
 .checkout-title {
   margin-right: 0.5rem;
+  font-family: Poppins, -apple-system, Roboto, Helvetica, sans-serif;
 }
 
 .checkout-item {
@@ -238,6 +247,7 @@
 }
 
 .checkout-item:nth-child(3) {
+  font-family: Poppins, -apple-system, Roboto, Helvetica, sans-serif;
   margin-top: 1.5rem;
 }
 
@@ -245,6 +255,7 @@
   align-self: flex-start;
   margin-top: 2.5rem;
   font-weight: 700;
+  font-family: Poppins, -apple-system, Roboto, Helvetica, sans-serif;
 }
 
 .checkout-values {
@@ -261,6 +272,7 @@
 }
 
 .checkout-value:nth-child(2) {
+  font-family: Poppins, -apple-system, Roboto, Helvetica, sans-serif;
   align-self: flex-end;
   margin-top: 1rem;
 }
@@ -294,6 +306,7 @@
   width: 268px;
   text-align: center;
   cursor: pointer;
+    font-family: Poppins, -apple-system, Roboto, Helvetica, sans-serif;
 }
 
 .breadcrumb {
