--- a/src/Reseña/Reseña.css
+++ b/src/Reseña/Reseña.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 .resenas-container {
   overflow: hidden;
   background-color: #f5f5f5;
