--- a/src/Reserva/ReservaSala24.css
+++ b/src/Reserva/ReservaSala24.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 .reserva-container {
   display: flex;
   overflow: hidden;
@@ -62,7 +63,7 @@
   object-fit: contain;
   z-index: 10;
   width: 100%;
-  border-radius: 1.5rem;
+  border-radius: 25rem;
   background-blend-mode: normal;
   aspect-ratio: 1.3;
 }
