--- a/src/VerEspacio/VerCentroMundoX.css
+++ b/src/VerEspacio/VerCentroMundoX.css
@@ -117,7 +117,11 @@
 
 .darkBox {
   background-color: #0f172a;
-  padding: 0 8rem;
+  padding: 2rem; 
+  overflow: hidden; 
+  word-wrap: break-word; 
+  height: auto; 
+  min-height: 335px;
 }
 
 .textContent {
@@ -128,7 +132,13 @@
 }
 
 .darkTextContent {
-  width: 525px;
+  width: 100%;
+  font-size: 1.5rem;
+  line-height: 1.5; 
+  color: white;
+  hyphens: auto; 
+  overflow-wrap: break-word; 
+  
 }
 
 .contentImage {
