sidebar, funcionalidad de inicio de sesión

--- a/src/Reserva/ReservaMundoX.css
+++ b/src/Reserva/ReservaMundoX.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
+
 .reserva-container {
   display: flex;
   overflow: hidden;
@@ -56,6 +59,7 @@
   inset: 0;
   width: 100%;
   height: 100%;
+  font-family: Poppins, -apple-system, Roboto, Helvetica, sans-serif; ;
 }
 
 .space-main-image {
