--- a/src/Componente/Header-Footer.css
+++ b/src/Componente/Header-Footer.css
@@ -92,3 +92,54 @@
     text-align: center;
     font-family: 'Roboto', sans-serif;
 }
+
+.sidebar {
+  margin-top: 0;
+  width: 0rem;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 1000000;
+  padding: 1.1rem 0;
+  overflow-y: auto;
+  background-color:#0f172a;
+}
+
+.sidebar.menu-open {
+  width: 18.75rem;
+}
+
+.sidebar a {
+  border: #e76f2a;
+  display: flex;
+  align-items: center;
+  gap: 1.3 rem;
+  padding: 0.9rem 0.7rem;
+  text-decoration: none;
+  margin: 0 0.5rem;
+  border-radius: 0.5rem;
+  white-space: nowrap;
+  overflow: hidden;
+  color: white;
+  font-family: 'Roboto', sans-serif;
+}
+.sidebar img {
+  width: 47px;
+  height: 100%;
+  object-fit: cover;
+  margin-right: 12px;
+}
+
+ul { list-style-type: none; }
+
+.boton-cerrar {
+  margin-left:auto;
+  margin-right: 1.5rem;
+  cursor: pointer;
+}
+
+.sidebar-cerrar {
+  display: flex;
+  justify-content: flex-end;
+}
