--- a/src/VerEspacioMenu/VerEspacio.css
+++ b/src/VerEspacioMenu/VerEspacio.css
@@ -41,14 +41,19 @@
 .hero-text {
   position: relative;
   z-index: 1;
+  font-family: 'Arial', sans-serif;
 }
 
 /* Page Title */
 .page-title {
-  margin-top: 5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: rem;
   font-size: 2.25rem;
   font-weight: 700;
   color: #020617;
+  font-family: 'Arial', sans-serif;
 }
 
 /* Search Section */
@@ -87,6 +92,7 @@
   position: relative;
   cursor: pointer;
   min-width: 150px;
+  font-family: 'Arial', sans-serif;
 }
 
 .search-input-container {
@@ -137,6 +143,7 @@
   align-self: stretch;
   margin: auto 0;
   color: black;
+  font-family: 'Arial', sans-serif;
 }
 
 .location-dropdown {
@@ -151,6 +158,7 @@
   color: #6b7280;
   width: 206px;
   padding-right: 1.25rem;
+  font-family: 'Arial', sans-serif;
 }
 
 /* Spaces Section */
@@ -205,6 +213,7 @@
   font-weight: 700;
   color: white;
   margin-bottom: 1.25rem;
+   font-family: 'Arial', sans-serif;
 }
 
 .space-content {
@@ -220,11 +229,13 @@
 
 .centro-mundo .space-content {
   padding: 1.25rem 0.5rem 0.5rem 2rem;
+  font-family: 'Arial', sans-serif;
 }
 
 .canchas .space-content {
   padding: 1.25rem 0.75rem 0.5rem;
   margin-top: 1.25rem;
+  font-family: 'Arial', sans-serif;
 }
 
 .space-image {
@@ -244,6 +255,7 @@
   margin: 0.75rem 2rem 0 1.25rem;
   font-size: 1rem;
   color: black;
+   font-family: 'Arial', sans-serif;
 }
 
 .centro-mundo .space-description {
@@ -282,6 +294,7 @@
   align-self: stretch;
   margin: auto 0;
   width: 182px;
+   font-family: 'Arial', sans-serif;
 }
 
 .info-arrow {
@@ -342,7 +355,8 @@
   }
 
   .page-title {
-    margin-top: 2.5rem;
+    margin-top: 5rem;
+    font-family: 'Arial', sans-serif;
   }
 
   .space-row {
@@ -397,5 +411,6 @@
   transform: translateY(-50%);
   font-size: 0.7rem;
   color: #6b7280;
+  font-family: 'Arial', sans-serif;
 }
 }
