--- a/src/Editarperfil/EditarPerfilDeUsuario.css
+++ b/src/Editarperfil/EditarPerfilDeUsuario.css
@@ -489,3 +489,51 @@ body {
   top: 785px;
   width: 24px;
 }
+.form-input {
+  border: none;
+  outline: none;
+  background: transparent;
+  width: 90%;
+  font-family: "Roboto", Helvetica;
+  font-size: 20px;
+  color: #030027;
+  padding: 15px;
+}
+
+.error-message {
+  color: #ff3333;
+  font-family: "Roboto", Helvetica;
+  font-size: 14px;
+  position: absolute;
+  left: 18px;
+  top: 60px;
+  margin-top: 5px;
+}
+
+.global-message {
+  position: absolute;
+  top: 680px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 18px;
+  font-weight: bold;
+  text-align: center;
+  width: 80%;
+}
+
+.global-message.success {
+  color: #4BB543;
+}
+
+.global-message.error {
+  color: #ff3333;
+}
+
+.ellipse {
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+.ellipse:hover {
+  transform: scale(1.05);
+}
